# app_db

./: .gitignore  README.md  pyproject.toml
app_db/hardware_model/: __init__.py  create_dummy_data.py  mirror_type.py  model_creator.py
app_db/hardware_types/: mirror_type.py  model_creator.py  sizing.py
app_db/interface/: __init__.py  interface.py  utils.py
app_db/sql_models/: __init__.py  bases.py  comment.py  equipment.py  hardware.py  hardware_model.py  measurement.py  measurement_result_junction.py  non_compliance.py  order.py  order_watch.py  picture.py  production_step.py  production_step_model.py  production_step_model_watch.py  result.py  specification.py  specification_result_junction.py  user.py  user_preference.py
apps/: connect.py  create_hardware_models.py  create_tables.py  create_user_preferences.py  create_users.py  query_user.py  rest_api_demo.py
config/: mariadb_launch.yaml  maxscale.cnf  maxscale_launch.yaml
img/: database_structure.drawio
